BugFix - updated to enable an endpoint for each report type (111 v2, v3 and ambulance v2, v3).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,23 @@ server.port=5000
 # config for running validator
 validation.executable.path=/workspace/app/TKW/
 validation.executable=TKW.jar
-validation.executable.args.111=/workspace/app/TKW/config/ITK_111/tkw.properties
-prevalidation.directory.111=/workspace/app/TKW/config/ITK_111/messages_for_validation/
-validation.report.directory.111=/workspace/app/TKW/config/ITK_111/validator_reports/
+
+# 111 v2
+validation.executable.args.111.v2=/workspace/app/TKW/config/ITK_111/tkw111v2.properties
+prevalidation.directory.111.v2=/workspace/app/TKW/config/ITK_111/messages_for_validation/111v2/
+validation.report.directory.111.v2=/workspace/app/TKW/config/ITK_111/validator_reports/111v2/
+
+# 111 v3
+validation.executable.args.111.v3=/workspace/app/TKW/config/ITK_111/tkw111v3.properties
+prevalidation.directory.111.v3=/workspace/app/TKW/config/ITK_111/messages_for_validation/111v3/
+validation.report.directory.111.v3=/workspace/app/TKW/config/ITK_111/validator_reports/111v3/
+
+#ambulance v2
+validation.executable.args.ambulance.v2=/workspace/app/TKW/config/ITK_111/tkwAmbulancev2.properties
+prevalidation.directory.ambulance.v2=/workspace/app/TKW/config/ITK_111/messages_for_validation/ambulancev2/
+validation.report.directory.ambulance.v2=/workspace/app/TKW/config/ITK_111/validator_reports/ambulancev2/
+
+#ambulance v3
+validation.executable.args.ambulance.v3=/workspace/app/TKW/config/ITK_111/tkwAmbulancev3.properties
+prevalidation.directory.ambulance.v3=/workspace/app/TKW/config/ITK_111/messages_for_validation/ambulancev3/
+validation.report.directory.ambulance.v3=/workspace/app/TKW/config/ITK_111/validator_reports/ambulancev3/
